HW/5/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  selector:
    app: app-v1
    app: app-v2
  ports:
  - name: http
    port: 80
    protocol: TCP
  type: ClusterIP
